--- a/test.html
+++ b/test.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Smart Price</title>
 	<link rel = "stylesheet" href="style.css" />
-	<script type="Hackathon/script.js"></script>
+	<script type="/script.js"></script>
 </head>
 <body>
 <div class "header">
@@ -14,12 +14,12 @@
 <div class = "container">
 	<form method="post" action="something.php" name="myForm">
 	<div>
-		<label>Item</label>
+		<label>Item:</label>
 		<input type = "text" name="Item" id = "Item" />
 	</div>
 	<br />
 	<div>
-		<label>Category</label>
+		<label>Category:</label>
 		<select>name="Category" id="category">
 			<option value="Antiques">Antiques</option>
 			<option value="Art">Art</option>
@@ -59,14 +59,15 @@
 	</div>
 	<br />
 	<div>
-		<label>Condition</label>
+		<label>Condition:</label>
 		<select>name="Condition" id="condition">
 			<option value="New">New</option>
 			<option value="Used">Used</option>
 		</select>
 	</div>
 	<br />
-	<button onclick= "findBestPrice()">Price My Item!</button>
+	<button class = "button" onclick= "alert("Button works!)">Price My Item!
+	</button>
 </form>
 </div>
 
