--- a/test.html
+++ b/test.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<script src="script.js"></script>
 <html>
 <head>
 	<title>Smart Price</title>
@@ -66,8 +67,7 @@
 		</select>
 	</div>
 	<br />
-	<button class = "button" onclick= "alert("Button works!)">Price My Item!
-	</button>
+	<input class = "button" id="Price My Item!" type="button" value="Price My Item!" onclick="findBestPrice();" />
 </form>
 </div>
 
